kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defi-api-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: defi-api
  template:
    metadata:
      labels:
        app: defi-api
    spec:
      containers:
        - name: defi-api
          image: `8392019284.dkr.ecr.us-west-1.amazonaws.com/defi-api:1.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: config-volume
            mountPath: /usr/share/app/config/production.json
            subPath: production.json
      volumes:
      - name: config-volume
        configMap:
          name: defi-configmap
