kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: defi-api-service
spec:
  type: NodePort
  selector:
    app: defi-api
  ports:
    - port: 80
      targetPort: 3000
