kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-alb"
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: "dev.test.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: "defi-api-service"
            port:
              number: 80
